install (
   FILES plasmavault.svgz plasmavault-error.svgz
   DESTINATION ${PLASMA_DATA_INSTALL_DIR}/desktoptheme/default/icons/
   )

# include (ECMInstallIcons)
#
# ecm_install_icons (
#    ICONS
#    hi22-apps-plasmavault-error.svgz
#    hi22-apps-plasmavault.svgz
#    DESTINATION ${ICON_INSTALL_DIR}
#    )

